camel-k-monitoring.yml
kind: Service
apiVersion: v1
metadata:
  name: camel-k-operator-internal
  labels:
    app: camel-k
    camel.apache.org/component: operator
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: camel-k
    camel.apache.org/component: operator
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: camel-k-integration-knative-event-producer-internal
  labels:
    app: camel-k
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    camel.apache.org/integration: knative-event-producer
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: camel-k-integration-knative-event-processor-internal
  labels:
    app: camel-k
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    camel.apache.org/integration: knative-event-processor
  type: ClusterIP
