quarkus-camel-k-demo-be.deployment.yml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: aa22e95bbda7a02cbac2650839b32e590bf3e935
    app.quarkus.io/build-timestamp: 2022-05-28 - 14:45:45 +0000
  labels:
    app.kubernetes.io/name: quarkus-camel-k-demo
    app.kubernetes.io/version: "1.0"
  name: quarkus-camel-k-demo
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quarkus-camel-k-demo
        app.kubernetes.io/version: "1.0"
    spec:
      containers:
        - image: docker.io/robnav24241/camel-k:quarkus-camel-k-demo
          name: quarkus-camel-k-demo
          ports:
            - containerPort: 8080
              name: http1
              protocol: TCP
      serviceAccountName: quarkus-camel-k-demo
