quarkus-web-socket-server.deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: aa22e95bbda7a02cbac2650839b32e590bf3e935
    app.quarkus.io/build-timestamp: 2022-05-28 - 14:55:28 +0000
  labels:
    app.kubernetes.io/name: quarkus-web-socket-server
    app.kubernetes.io/part-of: quarkus-web-socket-server
    app.kubernetes.io/version: "1.0"
  name: quarkus-web-socket-server
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8081
  selector:
    app.kubernetes.io/name: quarkus-web-socket-server
    app.kubernetes.io/part-of: quarkus-web-socket-server
    app.kubernetes.io/version: "1.0"
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: aa22e95bbda7a02cbac2650839b32e590bf3e935
    app.quarkus.io/build-timestamp: 2022-05-28 - 14:55:28 +0000
  labels:
    app.kubernetes.io/version: "1.0"
    app.kubernetes.io/name: quarkus-web-socket-server
    app.kubernetes.io/part-of: quarkus-web-socket-server
  name: quarkus-web-socket-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: "1.0"
      app.kubernetes.io/name: quarkus-web-socket-server
      app.kubernetes.io/part-of: quarkus-web-socket-server
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: aa22e95bbda7a02cbac2650839b32e590bf3e935
        app.quarkus.io/build-timestamp: 2022-05-28 - 14:55:28 +0000
      labels:
        app.kubernetes.io/version: "1.0"
        app.kubernetes.io/name: quarkus-web-socket-server
        app.kubernetes.io/part-of: quarkus-web-socket-server
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: docker.io/robnav24241/camel-k:quarkus-web-socket-server
          imagePullPolicy: Always
          name: quarkus-web-socket-server
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
