prometheus-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
spec:
  rules:
    - host: prometheus.raspberry.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-internal
                port:
                  number: 9090
