quarkus-web-socket-server.ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: quarkus-web-socket-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefix
spec:
  rules:
    - host: quarkus-web-socket-server.raspberry.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quarkus-web-socket-server
                port:
                  number: 80
